<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="none"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.soundhub.ricardo.soundhub.activities.SettingsActivity"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        >

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            />

        <TextView
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@color/fab_material_grey_900"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_header"
            android:gravity="center"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/fab_material_grey_900"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_about"/>

        <View
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/fab_material_blue_grey_500"
            />

        <TextView
            android:layout_marginTop="15dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@color/fab_material_grey_500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thanks_to"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/settings_libraries"
            android:layout_marginTop="15dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@color/fab_material_grey_500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            />

        <TextView
            android:layout_marginTop="15dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@color/fab_material_grey_500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/source_code_location"
            />

    </LinearLayout>
</ScrollView>